completo (che giornata!)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "html-sass-first",
   "version": "1.0.0",
   "description": "html-sass-first",
-  "main": "index.js",
+  "main": "webpack.mix.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
